Add javascript solution for unique chars.

--- a/arrays_strings/two_sum/two_sum_solution.ipynb
+++ b/arrays_strings/two_sum/two_sum_solution.ipynb
@@ -275,6 +275,83 @@
    "source": [
     "%run -i test_two_sum.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# %load twoSum.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class Solution {\n",
+    "\n",
+    "  twoSum(nums, target) {\n",
+    "    if (!(nums instanceof Array) || typeof target !== 'number') {\n",
+    "      throw new TypeError('arg1 must be of type array or arg2 must be of type number.');\n",
+    "    }\n",
+    "    if (nums.length < 1) {\n",
+    "      throw new Error('arg1 cannot be empty array.');\n",
+    "    }\n",
+    "    const cache = new Map();\n",
+    "    for (let idx in nums) {\n",
+    "      idx = Number(idx);\n",
+    "      const num = nums[idx];\n",
+    "      const cacheTarget = target - num;\n",
+    "      if (cache.has(num)) {\n",
+    "        return [cache.get(num), idx];\n",
+    "      } else {\n",
+    "        cache.set(cacheTarget, idx);\n",
+    "      }\n",
+    "    }\n",
+    "    return null;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestTwoSum {\n",
+    "\n",
+    "  testTwoSum() {\n",
+    "    const solution = new Solution();\n",
+    "    assert.throws(() => solution.twoSum(null, 7), TypeError);\n",
+    "    assert.throws(() => solution.twoSum([], 7), /^Error: .* empty array.$/);\n",
+    "    const target = 7;\n",
+    "    const nums = [1, 3, 2, -7, 5];\n",
+    "    const expected = [2, 4];\n",
+    "    assert.deepEqual(solution.twoSum(nums, target), expected);\n",
+    "    console.log('Success: testTwoSum');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestTwoSum();\n",
+    "  test.testTwoSum();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
