--- a/arrays_strings/unique_chars/unique_chars_solution.ipynb
+++ b/arrays_strings/unique_chars/unique_chars_solution.ipynb
@@ -329,6 +329,110 @@
    "source": [
     "%run -i test_unique_chars.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# %load uniqueChars.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class UniqueCharsSet {\n",
+    "\n",
+    "  hasUniqueChars(str) {\n",
+    "    if (typeof str !== 'string') {\n",
+    "      return false;\n",
+    "    }\n",
+    "    return new Set(str.split('')).size === str.length;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class UniqueChars {\n",
+    "\n",
+    "  hasUniqueChars(str) {\n",
+    "    if (typeof str !== 'string') {\n",
+    "      return false;\n",
+    "    }\n",
+    "    const charsSet = new Set();\n",
+    "    for (const idx in str) {\n",
+    "      const char = str[idx];\n",
+    "      if (charsSet.has(char)) {\n",
+    "        return false;\n",
+    "      } else {\n",
+    "        charsSet.add(char);\n",
+    "      }\n",
+    "    }\n",
+    "    return true;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class UniqueCharsInPlace {\n",
+    "\n",
+    "  hasUniqueChars(str) {\n",
+    "    if (typeof str !== 'string') {\n",
+    "      return false;\n",
+    "    }\n",
+    "    for (const idx in str) {\n",
+    "      const char = str[idx];\n",
+    "      const re = new RegExp(char, 'g');\n",
+    "      if (str.match(re).length > 1) {\n",
+    "        return false;\n",
+    "      }\n",
+    "    }\n",
+    "    return true;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestUniqueChars {\n",
+    "\n",
+    "  testUniqueChars(func) {\n",
+    "    assert.equal(func(null), false);\n",
+    "    assert.equal(func(''), true);\n",
+    "    assert.equal(func('foo'), false);\n",
+    "    assert.equal(func('bar'), true);\n",
+    "    console.log('Success: testUniqueChars');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  let test = new TestUniqueChars();\n",
+    "  const uniqueCharSets = new UniqueCharsSet();\n",
+    "  test.testUniqueChars(uniqueCharSets.hasUniqueChars);\n",
+    "  test = new TestUniqueChars();\n",
+    "  const uniqueChars = new UniqueChars();\n",
+    "  test.testUniqueChars(uniqueChars.hasUniqueChars);\n",
+    "  test = new TestUniqueChars();\n",
+    "  const uniqueCharsInPlace = new UniqueCharsInPlace();\n",
+    "  test.testUniqueChars(uniqueCharsInPlace.hasUniqueChars);\n",
+    "\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
