--- a/sorting_searching/merge_sort/merge_sort_solution.ipynb
+++ b/sorting_searching/merge_sort/merge_sort_solution.ipynb
@@ -255,6 +255,104 @@
    "source": [
     "%run -i test_merge_sort.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# %load mergeSort.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class MergeSort {\n",
+    "\n",
+    "  sort(data) {\n",
+    "    if (!(data instanceof Array)) {\n",
+    "      throw new TypeError('data must be of type array.');\n",
+    "    }\n",
+    "    return this._sort(data);\n",
+    "  }\n",
+    "\n",
+    "  _sort(data) {\n",
+    "    if (data.length < 2) {\n",
+    "      return data;\n",
+    "    }\n",
+    "    const mid = Math.floor(data.length / 2);\n",
+    "    let left = data.slice(0, mid);\n",
+    "    let right = data.slice(mid, data.length);\n",
+    "    left = this._sort(left);\n",
+    "    right = this._sort(right);\n",
+    "    return this._merge(left, right);\n",
+    "  }\n",
+    "\n",
+    "  _merge(left, right) {\n",
+    "    let l = 0;\n",
+    "    let r = 0;\n",
+    "    const result = [];\n",
+    "    while (l < left.length && r < right.length) {\n",
+    "      if (left[l] < right[r]) {\n",
+    "        result.push(left[l]);\n",
+    "        l += 1;\n",
+    "      } else {\n",
+    "        result.push(right[r]);\n",
+    "        r += 1;\n",
+    "      }\n",
+    "    }\n",
+    "    while (l < left.length) {\n",
+    "      result.push(left[l]);\n",
+    "      l += 1;\n",
+    "    }\n",
+    "    while (r < right.length) {\n",
+    "      result.push(right[r]);\n",
+    "      r += 1;\n",
+    "    }\n",
+    "    return result;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestMergeSort {\n",
+    "\n",
+    "  testMergeSort() {\n",
+    "    const mergeSort = new MergeSort();\n",
+    "\n",
+    "    console.log('Null input');\n",
+    "    assert.throws(() => mergeSort.sort(), TypeError);\n",
+    "    console.log('Empty input');\n",
+    "    assert.deepEqual(mergeSort.sort([]), []);\n",
+    "    console.log('One element');\n",
+    "    assert.deepEqual(mergeSort.sort([5]), [5]);\n",
+    "    console.log('Two or more elements');\n",
+    "    const data = [5, 1, 7, 2, 6, -3, 5, 7, -1];\n",
+    "    assert.deepEqual(mergeSort.sort(data), data.sort((a, b) => a - b));\n",
+    "    console.log('Success: testMergeSort');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestMergeSort();\n",
+    "  test.testMergeSort();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
