--- a/linked_lists/linked_list/linked_list_solution.ipynb
+++ b/linked_lists/linked_list/linked_list_solution.ipynb
@@ -2,30 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "This notebook was prepared by [Donne Martin](http://donnemartin.com). Source and license info is on [GitHub](https://github.com/donnemartin/interactive-coding-challenges)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Solution Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Problem: Implement a linked list with insert, append, find, delete, length, and print methods.\n",
     "\n",
@@ -38,10 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Constraints\n",
     "\n",
@@ -55,10 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Test Cases\n",
     "\n",
@@ -100,10 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Algorithm\n",
     "\n",
@@ -181,22 +163,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -310,12 +285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%run linked_list.py"
@@ -323,22 +294,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Unit Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -471,12 +435,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -514,27 +474,311 @@
    "source": [
     "%run -i test_linked_list.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test: insertToFront on an empty list.\n",
+      "Test: insert_to_front on a null\n",
+      "Test: insert_to_front general case\n",
+      "Success: insertToFront\n",
+      "\n",
+      "Test: append on an empty list.\n",
+      "Test: append a null.\n",
+      "Test: append general case.\n",
+      "Success: testAppend\n",
+      "\n",
+      "Test: find on an empty list\n",
+      "Test: find on a null\n",
+      "Test: find general case with matches\n",
+      "Test: find general case with no matches\n",
+      "Success: testFind\n",
+      "\n",
+      "Test: delete on an empty list\n",
+      "Test: delete on a null\n",
+      "Test: delete general case with matches\n",
+      "Test: delete general case with no matches\n",
+      "Success: testDelete\n",
+      "\n",
+      "Test: length on an empty list\n",
+      "Test: length on a general case\n",
+      "Success: testLength\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "//# %load linkedList.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class Node {\n",
+    "\n",
+    "  constructor(data, next = null) {\n",
+    "    this.data = data;\n",
+    "    this.next = next;\n",
+    "  }\n",
+    "\n",
+    "  toString() {\n",
+    "    return String(this.data);\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class LinkedList {\n",
+    "\n",
+    "  constructor(head = null) {\n",
+    "    this.head = head;\n",
+    "  }\n",
+    "\n",
+    "  get length() {\n",
+    "    let currentNode = this.head;\n",
+    "    let counter = 0;\n",
+    "\n",
+    "    while(currentNode) {\n",
+    "      counter += 1;\n",
+    "      currentNode = currentNode.next;\n",
+    "    }\n",
+    "    return counter;\n",
+    "  }\n",
+    "\n",
+    "  insertToFront(data) {\n",
+    "    if (data == null) {\n",
+    "      return null;\n",
+    "    }\n",
+    "    const node = new Node(data, this.head);\n",
+    "    this.head = node;\n",
+    "    return node;\n",
+    "  }\n",
+    "\n",
+    "  append(data) {\n",
+    "    if (data == null) {\n",
+    "      return null;\n",
+    "    }\n",
+    "    const node = new Node(data);\n",
+    "    if (!this.head) {\n",
+    "      this.head = node;\n",
+    "      return node;\n",
+    "    }\n",
+    "    const currentNode = this.head;\n",
+    "    while (currentNode.next) {\n",
+    "      currentNode = currentNode.next;\n",
+    "    }\n",
+    "    currentNode.next = node;\n",
+    "    return node;\n",
+    "  }\n",
+    "\n",
+    "  find(data) {\n",
+    "    if (data == null) {\n",
+    "      return null;\n",
+    "    }\n",
+    "    if (!this.head) {\n",
+    "      return null;\n",
+    "    }\n",
+    "    let currentNode = this.head;\n",
+    "    while (currentNode) {\n",
+    "      if (currentNode.data === data) {\n",
+    "        return currentNode;\n",
+    "      }\n",
+    "      currentNode = currentNode.next;\n",
+    "    }\n",
+    "    return null;\n",
+    "  }\n",
+    "\n",
+    "  delete(data) {\n",
+    "    if (data == null) {\n",
+    "      return;\n",
+    "    }\n",
+    "    if (!this.head) {\n",
+    "      return;\n",
+    "    }\n",
+    "    if (this.head.data === data) {\n",
+    "      this.head = null;\n",
+    "      return;\n",
+    "    }\n",
+    "    let prevNode = this.head;\n",
+    "    let currentNode = this.head.next;\n",
+    "    while (currentNode) {\n",
+    "      if (currentNode.data == data) {\n",
+    "        prevNode.next = currentNode.next;\n",
+    "        return;\n",
+    "      }\n",
+    "      prevNode = currentNode;\n",
+    "      currentNode = currentNode.next;\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  printList() {\n",
+    "    let currentNode = this.head;\n",
+    "    while (currentNode) {\n",
+    "      console.log(currentNode.data);\n",
+    "      currentNode = currentNode.next;\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  getAllData() {\n",
+    "    const data = [];\n",
+    "    let currentNode = this.head;\n",
+    "    while(currentNode != null) {\n",
+    "      data.push(currentNode.data);\n",
+    "      currentNode = currentNode.next;\n",
+    "    }\n",
+    "    return data;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestLinkedList {\n",
+    "\n",
+    "  testInsertToFront() {\n",
+    "    console.log('Test: insertToFront on an empty list.');\n",
+    "    const linkedList = new LinkedList(null);\n",
+    "    linkedList.insertToFront(10);\n",
+    "    assert.deepEqual(linkedList.getAllData(), [10]);\n",
+    "\n",
+    "    console.log('Test: insert_to_front on a null');\n",
+    "    linkedList.insertToFront(null);\n",
+    "    assert.deepEqual(linkedList.getAllData(), [10]);\n",
+    "\n",
+    "    console.log('Test: insert_to_front general case');\n",
+    "    linkedList.insertToFront('a');\n",
+    "    linkedList.insertToFront('bc');\n",
+    "    assert.deepEqual(linkedList.getAllData(), ['bc', 'a', 10]);\n",
+    "\n",
+    "    console.log('Success: insertToFront\\n');\n",
+    "  }\n",
+    "\n",
+    "  testAppend() {\n",
+    "    console.log('Test: append on an empty list.');\n",
+    "    const linkedList = new LinkedList(null);\n",
+    "    linkedList.insertToFront(10);\n",
+    "    assert.deepEqual(linkedList.getAllData(), [10]);\n",
+    "\n",
+    "    console.log('Test: append a null.');\n",
+    "    linkedList.insertToFront(null);\n",
+    "    assert.deepEqual(linkedList.getAllData(), [10]);\n",
+    "\n",
+    "    console.log('Test: append general case.');\n",
+    "    linkedList.insertToFront('a');\n",
+    "    linkedList.insertToFront('bc');\n",
+    "    assert.deepEqual(linkedList.getAllData(), ['bc', 'a', 10]);\n",
+    "\n",
+    "    console.log('Success: testAppend\\n');\n",
+    "  }\n",
+    "\n",
+    "  testFind() {\n",
+    "    console.log('Test: find on an empty list');\n",
+    "    let linkedList = new LinkedList(null);\n",
+    "    let node = linkedList.find('a');\n",
+    "    assert.equal(node, null);\n",
+    "\n",
+    "    console.log('Test: find on a null');\n",
+    "    let head = new Node(10);\n",
+    "    linkedList = new LinkedList(head);\n",
+    "    node = linkedList.find(null);\n",
+    "    assert.equal(node, null);\n",
+    "\n",
+    "    console.log('Test: find general case with matches');\n",
+    "    head = new Node(10);\n",
+    "    linkedList = new LinkedList(head);\n",
+    "    linkedList.insertToFront('a');\n",
+    "    linkedList.insertToFront('bc');\n",
+    "    node = linkedList.find('a');\n",
+    "    assert.equal(node.toString(), 'a');\n",
+    "\n",
+    "    console.log('Test: find general case with no matches');\n",
+    "    node = linkedList.find('aaa');\n",
+    "    assert.equal(node, null);\n",
+    "\n",
+    "    console.log('Success: testFind\\n');\n",
+    "  }\n",
+    "\n",
+    "  testDelete() {\n",
+    "    console.log('Test: delete on an empty list');\n",
+    "    let linkedList = new LinkedList(null);\n",
+    "    linkedList.delete('a');\n",
+    "    assert.deepEqual(linkedList.getAllData(), []);\n",
+    "\n",
+    "    console.log('Test: delete on a null');\n",
+    "    let head = new Node(10);\n",
+    "    linkedList = new LinkedList(head);\n",
+    "    linkedList.delete(null);\n",
+    "    assert.deepEqual(linkedList.getAllData(), [10]);\n",
+    "\n",
+    "\n",
+    "    console.log('Test: delete general case with matches');\n",
+    "    head = new Node(10);\n",
+    "    linkedList = new LinkedList(head);\n",
+    "    linkedList.insertToFront('a');\n",
+    "    linkedList.insertToFront('bc');\n",
+    "    linkedList.delete('a');\n",
+    "    assert.deepEqual(linkedList.getAllData(), ['bc', 10]);\n",
+    "\n",
+    "    console.log('Test: delete general case with no matches');\n",
+    "    linkedList.delete('aa');\n",
+    "    assert.deepEqual(linkedList.getAllData(), ['bc', 10]);\n",
+    "\n",
+    "    console.log('Success: testDelete\\n');\n",
+    "  }\n",
+    "\n",
+    "  testLength() {\n",
+    "    console.log('Test: length on an empty list');\n",
+    "    let linkedList = new LinkedList(null);\n",
+    "    assert.equal(linkedList.length, 0);\n",
+    "\n",
+    "    console.log('Test: length on a general case');\n",
+    "    const head = new Node(10);\n",
+    "    linkedList = new LinkedList(head);\n",
+    "    linkedList.insertToFront('a');\n",
+    "    linkedList.insertToFront('bc');\n",
+    "    assert.equal(linkedList.length, 3);\n",
+    "\n",
+    "    console.log('Success: testLength\\n');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestLinkedList();\n",
+    "  test.testInsertToFront();\n",
+    "  test.testAppend();\n",
+    "  test.testFind();\n",
+    "  test.testDelete();\n",
+    "  test.testLength();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
