--- a/arrays_strings/compress/compress_solution.ipynb
+++ b/arrays_strings/compress/compress_solution.ipynb
@@ -2,30 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "This notebook was prepared by [Donne Martin](http://donnemartin.com). Source and license info is on [GitHub](https://github.com/donnemartin/interactive-coding-challenges)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Solution Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Problem: Compress a string such that 'AAABCCDDDD' becomes 'A3BC2D4'.  Only compress the string if it saves space.\n",
     "\n",
@@ -38,10 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Constraints\n",
     "\n",
@@ -58,10 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Test Cases\n",
     "\n",
@@ -73,10 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Algorithm\n",
     "\n",
@@ -102,10 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Code"
    ]
@@ -113,11 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class CompressString(object):\n",
@@ -144,10 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Unit Test"
    ]
@@ -155,11 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -199,11 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -216,27 +180,114 @@
    "source": [
     "%run -i test_compress.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test: null string\n",
+      "Test: empty string\n",
+      "Test: for general case\n",
+      "Success: testCompress\n"
+     ]
+    }
+   ],
+   "source": [
+    "//# %load compress.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class CompressString {\n",
+    "\n",
+    "  compress(str) {\n",
+    "    if (typeof str !== 'string' || !str) {\n",
+    "      return str;\n",
+    "    }\n",
+    "    let result = '';\n",
+    "    let prevChar = str[0];\n",
+    "    let count = 0;\n",
+    "    for (const idx in str) {\n",
+    "      if (str[idx] === prevChar) {\n",
+    "        count += 1;\n",
+    "      } else {\n",
+    "        result += this._compress(prevChar, count);\n",
+    "        prevChar = str[idx];\n",
+    "        count = 1;\n",
+    "      }\n",
+    "    }\n",
+    "    result += this._compress(prevChar, count);\n",
+    "    if (result.length < str.length) {\n",
+    "      return result;\n",
+    "    } else {\n",
+    "      return str;\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  _compress(prevChar, count) {\n",
+    "    if (count > 1) {\n",
+    "      return prevChar + count;\n",
+    "    } else {\n",
+    "      return prevChar + '';\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestCompressString {\n",
+    "\n",
+    "  testCompress() {\n",
+    "    const compressString = new CompressString();\n",
+    "    console.log('Test: null string');\n",
+    "    assert.equal(compressString.compress(null), null);\n",
+    "    console.log('Test: empty string');\n",
+    "    assert.equal(compressString.compress(''), '');\n",
+    "    console.log('Test: for general case');\n",
+    "    assert.equal(compressString.compress('AABBCC'), 'AABBCC');\n",
+    "    assert.equal(compressString.compress('AAABCCDDDDE'), 'A3BC2D4E');\n",
+    "    assert.equal(compressString.compress('BAAACCDDDD'), 'BA3C2D4');\n",
+    "    assert.equal(compressString.compress('AAABAACCDDDD'), 'A3BA2C2D4');\n",
+    "    console.log('Success: testCompress');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestCompressString();\n",
+    "  test.testCompress();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
