--- a/linked_lists/linked_list/linked_list_solution.ipynb
+++ b/linked_lists/linked_list/linked_list_solution.ipynb
@@ -768,15 +768,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Javascript (Node.js)",
-   "language": "javascript",
-   "name": "javascript"
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
   },
   "language_info": {
-   "file_extension": ".js",
-   "mimetype": "application/javascript",
-   "name": "javascript",
-   "version": "10.12.0"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
